<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.fiap.mob.pizzabut.MainActivity">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/radiopizzaGroup">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_mussarela"
            android:id="@+id/btnMussarela"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_calabresa"
            android:id="@+id/btnCalabresa"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_portuguesa"
            android:id="@+id/btnPortuguesa"
            android:checked="false" />
    </RadioGroup>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_borda_recheada"
        android:id="@+id/checkBordaRecheada"
        android:checked="false"
        android:enabled="false"
        android:layout_below="@+id/radiopizzaGroup"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_calc_price"
        android:id="@+id/btnCalc"
        android:clickable="true"
        android:onClick="calc"
        android:layout_below="@+id/checkBordaRecheada"
        android:layout_alignParentStart="true" />
</RelativeLayout>
